8274562: (fs) UserDefinedFileAttributeView doesn't correctly determine if supported when using OverlayFS